// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render disabled next link if current page is last page 1`] = `
<section>
  <p>
    Test
  </p>
  <nav
    class="pagination"
  >
    <div
      class="loader"
    />
    <span
      class="display"
    >
      Page: 5 of 5
    </span>
    <button
      class="previous"
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
      disabled=""
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render disabled previous link current page is first page 1`] = `
<section>
  <p>
    Test
  </p>
  <nav
    class="pagination"
  >
    <div
      class="loader"
    />
    <span
      class="display"
    >
      Page: 1 of 5
    </span>
    <button
      class="previous"
      disabled=""
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render only loader if total is not passed initially 1`] = `
<div
  class="spinner"
  style="width:40px;height:40px"
>
  <div
    class="doubleBounce1"
  />
  <div
    class="doubleBounce2"
  />
</div>
`;

exports[`Render pagination with loader 1`] = `
<section>
  <p>
    Test
  </p>
  <nav
    class="pagination"
  >
    <div
      class="loader"
    >
      <div
        class="spinner"
        style="width:24px;height:24px"
      >
        <div
          class="doubleBounce1"
        />
        <div
          class="doubleBounce2"
        />
      </div>
    </div>
    <span
      class="display"
    >
      Page: 5 of 10
    </span>
    <button
      class="previous"
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render pagination with page numbers 1`] = `
<section>
  <p>
    Test
  </p>
  <nav
    class="pagination"
  >
    <div
      class="loader"
    />
    <span
      class="display"
    >
      Page: 5 of 10
    </span>
    <button
      class="previous"
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;
